# CSC677Project

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/application/: main.cpp  packet.cpp  packet.h  window.cpp  window.h  window.ui
src/platform/: linux.cpp  platform.h
